missing translations + fix translations

--- a/Resources/translations/AwakitMediaBundle.en.yml
+++ b/Resources/translations/AwakitMediaBundle.en.yml
@@ -1,2 +1,4 @@
-awakit_media: Media
+media: Media
 dropzone.message: Drop your files here!
+media.file.binaryContent: File
+media.image.binaryContent: Image
